# lab_semga67

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  fenwick_tree.hpp  main.cpp  plot.py  sparse_table.hpp
